samples/_failures_safe/1761223064_290291_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98b1200d.c: In function ‘main’:
./samples/SAFE/__tmp_98b1200d.c:148:16: error: missing terminating " character
  148 |         printf("%-20s:
      |                ^~~~~~~
./samples/SAFE/__tmp_98b1200d.c:148:9: error: expected expression at end of input
  148 |         printf("%-20s:
      |         ^~~~~~
./samples/SAFE/__tmp_98b1200d.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98b1200d.c:148:9: error: expected declaration or statement at end of input
